# rust-basics

./: .gitignore
001_bearings/basic_types/: Cargo.toml
001_bearings/hyper-microservice/: Cargo.toml
001_bearings/traitor/: Cargo.toml
002_fn/elevator/: Cargo.toml  test1.txt
002_fn/tests/: integration_tests.rs
003-master/: Readme.md
003-master/m001-collections/: Cargo.toml  test.txt
003-master/m002-modules/: Cargo.toml
003-master/m003-cargo-test/: Cargo.toml
003-master/m004-workspace/: Cargo.toml
003-master/m005-imgtool/: Cargo.toml
003-master/m006-bench/: Cargo.toml
003-master/m007-criterion/: Cargo.toml
003-master/m007-criterion/benches/: fibonacci.rs
003-master/m007-criterion/src/: lib.rs
003-master/m008-tdd/: Cargo.toml
003-master/m009-super-player/: Cargo.toml
003-master/m010-trait-inheritance/: Cargo.toml
003-master/m011-trait-bounds/: Cargo.toml
003-master/m012-trait-bounds-fn/: Cargo.toml
003-master/m013-complex/: Cargo.toml
003-master/m014-trait-objects/: Cargo.toml
003-master/m015-drop/: Cargo.toml
003-master/m016-box/: Cargo.toml
003-master/m017-linked-list/: Cargo.toml
003-master/m018-cell/: Cargo.toml
003-master/m019-interior-mut/: Cargo.toml
003-master/m020-option/: Cargo.toml
003-master/m021-result/: Cargo.toml  data.txt
003-master/m022-early-return/: Cargo.toml
003-master/m023-panic-threads/: Cargo.toml
003-master/m024-custom-error/: Cargo.toml
003-master/m027-advanced/native_counter/native/: Cargo.toml
003-master/m027-advanced/native_counter/native/src/: lib.rs
003-master/m027-advanced/rudis_asyc/: Cargo.toml
003-master/m027-advanced/rudis_asyc/src/: codec.rs  main.rs
004-actix/app_scope/: Cargo.toml
004-actix/hello_world/: Cargo.toml
005-tide/scripts/: builddb.sh
005-tide/witter-backend/: .env  Cargo.toml
005-tide/witter-backend/src/: main.rs
006-concurrency/m001-returns/: parallel_hello  parallel_hello.rs  sequential_hello  sequential_hello.rs
007-sql/: Readme.md
008-smart-pointers/pinning/: Cargo.toml
008-smart-pointers/pointers/: Cargo.toml
009-webapp/: Readme.md
009-webapp/mystore/: .env  Cargo.toml
009-webapp/mystore/src/: db_connection.rs  main.rs
009-webapp/mystore/src/handlers/: products.rs
009-webapp/mystore/src/models/: product.rs
009-webapp/scripts/: builddb.sh
010-data-structures/doubly-linked-list/: Cargo.toml
010-data-structures/linked-list/: Cargo.toml
010-data-structures/v1_hello/: Cargo.toml
010-data-structures/v3_result/: Cargo.toml
010-data-structures/v4_iter/: Cargo.toml
011-serial/derse/: Cargo.toml
012-youtube/kvstore/: Cargo.toml  kv.db
013-action/generics/: Cargo.toml
013-action/lifetimes/: Cargo.toml
borrow/: Cargo.toml
borrow/src/: main.rs
compose-trait-bounds/: Cargo.toml
fn-trait-bound/: Cargo.toml
fn-trait-bound/src/: main.rs
generics/: Cargo.toml
generics/src/: main.rs
hyper-microservice/: Cargo.toml
hyper-microservice/src/: main.rs
rust-book/conslist/: Cargo.toml
rust-book/minigrep/: Cargo.toml
rust-book/section_03_01/: Cargo.toml
rust-book/section_03_02/: Cargo.toml
trait-bounds/: Cargo.toml
(+137 files in other folders)
