[package]
name = "m007_criterion"
version = "0.1.0"
authors = ["Atul Sharma <asharma@sw-at.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "fibonacci"
harness = false

[dependencies]
