[package]
name = "witter-backend"
version = "0.1.0"
authors = ["Atul Sharma <asharma@sw-at.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version ="1.6.0", features=["unstable","attributes"]}
pretty_env_logger = "0.4.0" 
chrono = "0.4.11"
log = "0.4.8"
tide = "0.10.0"
sqlx = { version ="0.3.5", features=["runtime-async-std", "macros", "chrono","json","postgres","uuid"]}
dotenv = "0.15.0"
serde = { version = "1.0.111", features=["derive"]}
serde_json = "1.0.53"
uuid = "0.8.1"
thiserror = "1.0.19"
