[package]
authors = ["Atul Sharma <asharma@sw-at.com>"]
edition = "2018"
name = "witter-backend"
version = "0.1.0"

[dependencies]
chrono = "0.4.11"
dotenv = "0.15.0"
futures = "*"
http-service = "0.5.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
regex = "1"
serde_json = "1.0.53"
thiserror = "1.0.19"
tide = "0.10.0"
uuid = "0.8.1"

[dependencies.async-std]
features = ["unstable", "attributes"]
version = "1.6.0"

[dependencies.openssl]
features = ["vendored"]
version = "0.10"

[dependencies.serde]
features = ["derive"]
version = "1.0.111"

[dependencies.sqlx]
features = ["runtime-async-std", "macros", "chrono", "json", "postgres", "uuid"]
version = "0.3.5"

[dev-dependencies]
http-service-mock = "0.5.0"
http-types = "2.2.0"
