[package]
name = "mystore"
version = "0.1.0"
authors = ["Atul Sharma <asharma@sw-at.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.1.1"
diesel = {version = "1.4.5", features=["postgres"]}
dotenv = "0.15.0"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.55"
